MDEV-22031 Assertion bpage->in_page_hash failed in buf_pool_watch_set

commit 121a5e8d07fc96b686d450c8c44154096f5213e0 revised the function
buf_pool_watch_unset() in such a way that the debug field
buf_page_t::in_page_hash is no longer protected by buf_pool.mutex
and thus not safe to access by the debug assertion in
buf_pool_watch_set().

For now, let us revert the change to buf_pool_watch_unset()
and have it acquire the buf_pool.mutex for a longer time.